# aula-f75max

./: CMakeLists.txt  README.md
include/: aula.h
src/: device.c  display.c  main.c  reset.c  time_sync.c
